@@ -1,124 +1,124 @@
 .*: Assembler messages:
-.*:2: Error: AR 0 cannot be accessed by M-unit
-.*:3: Error: AR 1 cannot be accessed by M-unit
-.*:4: Error: AR 2 cannot be accessed by M-unit
-.*:5: Error: AR 3 cannot be accessed by M-unit
-.*:6: Error: AR 4 cannot be accessed by M-unit
-.*:7: Error: AR 5 cannot be accessed by M-unit
-.*:8: Error: AR 6 cannot be accessed by M-unit
-.*:9: Error: AR 7 cannot be accessed by M-unit
-.*:10: Error: AR 8 cannot be accessed by M-unit
-.*:11: Error: AR 9 cannot be accessed by M-unit
-.*:12: Error: AR 10 cannot be accessed by M-unit
-.*:13: Error: AR 11 cannot be accessed by M-unit
-.*:14: Error: AR 12 cannot be accessed by M-unit
-.*:15: Error: AR 13 cannot be accessed by M-unit
-.*:16: Error: AR 14 cannot be accessed by M-unit
-.*:17: Error: AR 15 cannot be accessed by M-unit
-.*:18: Error: AR 16 cannot be accessed by M-unit
-.*:19: Error: AR 17 cannot be accessed by M-unit
-.*:20: Error: AR 18 cannot be accessed by M-unit
-.*:21: Error: AR 19 cannot be accessed by M-unit
-.*:22: Error: AR 20 cannot be accessed by M-unit
-.*:23: Error: AR 21 cannot be accessed by M-unit
-.*:24: Error: AR 22 cannot be accessed by M-unit
-.*:25: Error: AR 23 cannot be accessed by M-unit
-.*:26: Error: AR 24 cannot be accessed by M-unit
-.*:27: Error: AR 25 cannot be accessed by M-unit
-.*:28: Error: AR 26 cannot be accessed by M-unit
-.*:29: Error: AR 27 cannot be accessed by M-unit
-.*:30: Error: AR 28 cannot be accessed by M-unit
-.*:31: Error: AR 29 cannot be accessed by M-unit
-.*:32: Error: AR 30 cannot be accessed by M-unit
-.*:33: Error: AR 31 cannot be accessed by M-unit
-.*:34: Error: AR 32 cannot be accessed by M-unit
-.*:35: Error: AR 33 cannot be accessed by M-unit
-.*:36: Error: AR 34 cannot be accessed by M-unit
-.*:37: Error: AR 35 cannot be accessed by M-unit
-.*:38: Error: AR 36 cannot be accessed by M-unit
-.*:39: Error: AR 37 cannot be accessed by M-unit
-.*:40: Error: AR 38 cannot be accessed by M-unit
-.*:41: Error: AR 39 cannot be accessed by M-unit
-.*:42: Error: AR 40 cannot be accessed by M-unit
-.*:43: Error: AR 41 cannot be accessed by M-unit
-.*:44: Error: AR 42 cannot be accessed by M-unit
-.*:45: Error: AR 43 cannot be accessed by M-unit
-.*:46: Error: AR 44 cannot be accessed by M-unit
-.*:47: Error: AR 45 cannot be accessed by M-unit
-.*:48: Error: AR 46 cannot be accessed by M-unit
-.*:49: Error: AR 47 cannot be accessed by M-unit
-.*:54: Error: AR 64 cannot be accessed by I-unit
-.*:55: Error: AR 65 cannot be accessed by I-unit
-.*:56: Error: AR 66 cannot be accessed by I-unit
-.*:57: Error: AR 67 cannot be accessed by I-unit
-.*:58: Error: AR 68 cannot be accessed by I-unit
-.*:59: Error: AR 69 cannot be accessed by I-unit
-.*:60: Error: AR 70 cannot be accessed by I-unit
-.*:61: Error: AR 71 cannot be accessed by I-unit
-.*:62: Error: AR 72 cannot be accessed by I-unit
-.*:63: Error: AR 73 cannot be accessed by I-unit
-.*:64: Error: AR 74 cannot be accessed by I-unit
-.*:65: Error: AR 75 cannot be accessed by I-unit
-.*:66: Error: AR 76 cannot be accessed by I-unit
-.*:67: Error: AR 77 cannot be accessed by I-unit
-.*:68: Error: AR 78 cannot be accessed by I-unit
-.*:69: Error: AR 79 cannot be accessed by I-unit
-.*:70: Error: AR 80 cannot be accessed by I-unit
-.*:71: Error: AR 81 cannot be accessed by I-unit
-.*:72: Error: AR 82 cannot be accessed by I-unit
-.*:73: Error: AR 83 cannot be accessed by I-unit
-.*:74: Error: AR 84 cannot be accessed by I-unit
-.*:75: Error: AR 85 cannot be accessed by I-unit
-.*:76: Error: AR 86 cannot be accessed by I-unit
-.*:77: Error: AR 87 cannot be accessed by I-unit
-.*:78: Error: AR 88 cannot be accessed by I-unit
-.*:79: Error: AR 89 cannot be accessed by I-unit
-.*:80: Error: AR 90 cannot be accessed by I-unit
-.*:81: Error: AR 91 cannot be accessed by I-unit
-.*:82: Error: AR 92 cannot be accessed by I-unit
-.*:83: Error: AR 93 cannot be accessed by I-unit
-.*:84: Error: AR 94 cannot be accessed by I-unit
-.*:85: Error: AR 95 cannot be accessed by I-unit
-.*:86: Error: AR 96 cannot be accessed by I-unit
-.*:87: Error: AR 97 cannot be accessed by I-unit
-.*:88: Error: AR 98 cannot be accessed by I-unit
-.*:89: Error: AR 99 cannot be accessed by I-unit
-.*:90: Error: AR 100 cannot be accessed by I-unit
-.*:91: Error: AR 101 cannot be accessed by I-unit
-.*:92: Error: AR 102 cannot be accessed by I-unit
-.*:93: Error: AR 103 cannot be accessed by I-unit
-.*:94: Error: AR 104 cannot be accessed by I-unit
-.*:95: Error: AR 105 cannot be accessed by I-unit
-.*:96: Error: AR 106 cannot be accessed by I-unit
-.*:97: Error: AR 107 cannot be accessed by I-unit
-.*:98: Error: AR 108 cannot be accessed by I-unit
-.*:99: Error: AR 109 cannot be accessed by I-unit
-.*:100: Error: AR 110 cannot be accessed by I-unit
-.*:101: Error: AR 111 cannot be accessed by I-unit
-.*:106: Error: AR 0 cannot be accessed by M-unit
-.*:107: Error: AR 1 cannot be accessed by M-unit
-.*:108: Error: AR 2 cannot be accessed by M-unit
-.*:109: Error: AR 3 cannot be accessed by M-unit
-.*:110: Error: AR 4 cannot be accessed by M-unit
-.*:111: Error: AR 5 cannot be accessed by M-unit
-.*:112: Error: AR 6 cannot be accessed by M-unit
-.*:113: Error: AR 7 cannot be accessed by M-unit
-.*:114: Error: AR 16 cannot be accessed by M-unit
-.*:115: Error: AR 17 cannot be accessed by M-unit
-.*:116: Error: AR 18 cannot be accessed by M-unit
-.*:117: Error: AR 19 cannot be accessed by M-unit
-.*:118: Error: AR 21 cannot be accessed by M-unit
-.*:119: Error: AR 24 cannot be accessed by M-unit
-.*:120: Error: AR 25 cannot be accessed by M-unit
-.*:121: Error: AR 26 cannot be accessed by M-unit
-.*:122: Error: AR 27 cannot be accessed by M-unit
-.*:123: Error: AR 28 cannot be accessed by M-unit
-.*:124: Error: AR 29 cannot be accessed by M-unit
-.*:125: Error: AR 30 cannot be accessed by M-unit
-.*:126: Error: AR 32 cannot be accessed by M-unit
-.*:127: Error: AR 36 cannot be accessed by M-unit
-.*:128: Error: AR 40 cannot be accessed by M-unit
-.*:129: Error: AR 44 cannot be accessed by M-unit
-.*:132: Error: AR 64 cannot be accessed by I-unit
-.*:133: Error: AR 65 cannot be accessed by I-unit
-.*:134: Error: AR 66 cannot be accessed by I-unit
+.*:2: Error: AR 0 can only be accessed by M-unit
+.*:3: Error: AR 1 can only be accessed by M-unit
+.*:4: Error: AR 2 can only be accessed by M-unit
+.*:5: Error: AR 3 can only be accessed by M-unit
+.*:6: Error: AR 4 can only be accessed by M-unit
+.*:7: Error: AR 5 can only be accessed by M-unit
+.*:8: Error: AR 6 can only be accessed by M-unit
+.*:9: Error: AR 7 can only be accessed by M-unit
+.*:10: Error: AR 8 can only be accessed by M-unit
+.*:11: Error: AR 9 can only be accessed by M-unit
+.*:12: Error: AR 10 can only be accessed by M-unit
+.*:13: Error: AR 11 can only be accessed by M-unit
+.*:14: Error: AR 12 can only be accessed by M-unit
+.*:15: Error: AR 13 can only be accessed by M-unit
+.*:16: Error: AR 14 can only be accessed by M-unit
+.*:17: Error: AR 15 can only be accessed by M-unit
+.*:18: Error: AR 16 can only be accessed by M-unit
+.*:19: Error: AR 17 can only be accessed by M-unit
+.*:20: Error: AR 18 can only be accessed by M-unit
+.*:21: Error: AR 19 can only be accessed by M-unit
+.*:22: Error: AR 20 can only be accessed by M-unit
+.*:23: Error: AR 21 can only be accessed by M-unit
+.*:24: Error: AR 22 can only be accessed by M-unit
+.*:25: Error: AR 23 can only be accessed by M-unit
+.*:26: Error: AR 24 can only be accessed by M-unit
+.*:27: Error: AR 25 can only be accessed by M-unit
+.*:28: Error: AR 26 can only be accessed by M-unit
+.*:29: Error: AR 27 can only be accessed by M-unit
+.*:30: Error: AR 28 can only be accessed by M-unit
+.*:31: Error: AR 29 can only be accessed by M-unit
+.*:32: Error: AR 30 can only be accessed by M-unit
+.*:33: Error: AR 31 can only be accessed by M-unit
+.*:34: Error: AR 32 can only be accessed by M-unit
+.*:35: Error: AR 33 can only be accessed by M-unit
+.*:36: Error: AR 34 can only be accessed by M-unit
+.*:37: Error: AR 35 can only be accessed by M-unit
+.*:38: Error: AR 36 can only be accessed by M-unit
+.*:39: Error: AR 37 can only be accessed by M-unit
+.*:40: Error: AR 38 can only be accessed by M-unit
+.*:41: Error: AR 39 can only be accessed by M-unit
+.*:42: Error: AR 40 can only be accessed by M-unit
+.*:43: Error: AR 41 can only be accessed by M-unit
+.*:44: Error: AR 42 can only be accessed by M-unit
+.*:45: Error: AR 43 can only be accessed by M-unit
+.*:46: Error: AR 44 can only be accessed by M-unit
+.*:47: Error: AR 45 can only be accessed by M-unit
+.*:48: Error: AR 46 can only be accessed by M-unit
+.*:49: Error: AR 47 can only be accessed by M-unit
+.*:54: Error: AR 64 can only be accessed by I-unit
+.*:55: Error: AR 65 can only be accessed by I-unit
+.*:56: Error: AR 66 can only be accessed by I-unit
+.*:57: Error: AR 67 can only be accessed by I-unit
+.*:58: Error: AR 68 can only be accessed by I-unit
+.*:59: Error: AR 69 can only be accessed by I-unit
+.*:60: Error: AR 70 can only be accessed by I-unit
+.*:61: Error: AR 71 can only be accessed by I-unit
+.*:62: Error: AR 72 can only be accessed by I-unit
+.*:63: Error: AR 73 can only be accessed by I-unit
+.*:64: Error: AR 74 can only be accessed by I-unit
+.*:65: Error: AR 75 can only be accessed by I-unit
+.*:66: Error: AR 76 can only be accessed by I-unit
+.*:67: Error: AR 77 can only be accessed by I-unit
+.*:68: Error: AR 78 can only be accessed by I-unit
+.*:69: Error: AR 79 can only be accessed by I-unit
+.*:70: Error: AR 80 can only be accessed by I-unit
+.*:71: Error: AR 81 can only be accessed by I-unit
+.*:72: Error: AR 82 can only be accessed by I-unit
+.*:73: Error: AR 83 can only be accessed by I-unit
+.*:74: Error: AR 84 can only be accessed by I-unit
+.*:75: Error: AR 85 can only be accessed by I-unit
+.*:76: Error: AR 86 can only be accessed by I-unit
+.*:77: Error: AR 87 can only be accessed by I-unit
+.*:78: Error: AR 88 can only be accessed by I-unit
+.*:79: Error: AR 89 can only be accessed by I-unit
+.*:80: Error: AR 90 can only be accessed by I-unit
+.*:81: Error: AR 91 can only be accessed by I-unit
+.*:82: Error: AR 92 can only be accessed by I-unit
+.*:83: Error: AR 93 can only be accessed by I-unit
+.*:84: Error: AR 94 can only be accessed by I-unit
+.*:85: Error: AR 95 can only be accessed by I-unit
+.*:86: Error: AR 96 can only be accessed by I-unit
+.*:87: Error: AR 97 can only be accessed by I-unit
+.*:88: Error: AR 98 can only be accessed by I-unit
+.*:89: Error: AR 99 can only be accessed by I-unit
+.*:90: Error: AR 100 can only be accessed by I-unit
+.*:91: Error: AR 101 can only be accessed by I-unit
+.*:92: Error: AR 102 can only be accessed by I-unit
+.*:93: Error: AR 103 can only be accessed by I-unit
+.*:94: Error: AR 104 can only be accessed by I-unit
+.*:95: Error: AR 105 can only be accessed by I-unit
+.*:96: Error: AR 106 can only be accessed by I-unit
+.*:97: Error: AR 107 can only be accessed by I-unit
+.*:98: Error: AR 108 can only be accessed by I-unit
+.*:99: Error: AR 109 can only be accessed by I-unit
+.*:100: Error: AR 110 can only be accessed by I-unit
+.*:101: Error: AR 111 can only be accessed by I-unit
+.*:106: Error: AR 0 can only be accessed by M-unit
+.*:107: Error: AR 1 can only be accessed by M-unit
+.*:108: Error: AR 2 can only be accessed by M-unit
+.*:109: Error: AR 3 can only be accessed by M-unit
+.*:110: Error: AR 4 can only be accessed by M-unit
+.*:111: Error: AR 5 can only be accessed by M-unit
+.*:112: Error: AR 6 can only be accessed by M-unit
+.*:113: Error: AR 7 can only be accessed by M-unit
+.*:114: Error: AR 16 can only be accessed by M-unit
+.*:115: Error: AR 17 can only be accessed by M-unit
+.*:116: Error: AR 18 can only be accessed by M-unit
+.*:117: Error: AR 19 can only be accessed by M-unit
+.*:118: Error: AR 21 can only be accessed by M-unit
+.*:119: Error: AR 24 can only be accessed by M-unit
+.*:120: Error: AR 25 can only be accessed by M-unit
+.*:121: Error: AR 26 can only be accessed by M-unit
+.*:122: Error: AR 27 can only be accessed by M-unit
+.*:123: Error: AR 28 can only be accessed by M-unit
+.*:124: Error: AR 29 can only be accessed by M-unit
+.*:125: Error: AR 30 can only be accessed by M-unit
+.*:126: Error: AR 32 can only be accessed by M-unit
+.*:127: Error: AR 36 can only be accessed by M-unit
+.*:128: Error: AR 40 can only be accessed by M-unit
+.*:129: Error: AR 44 can only be accessed by M-unit
+.*:132: Error: AR 64 can only be accessed by I-unit
+.*:133: Error: AR 65 can only be accessed by I-unit
+.*:134: Error: AR 66 can only be accessed by I-unit
